# django_mini

./: .gitignore  pyproject.toml
config/: urls.py
config/settings/: base.py  local.py  prod.py
reservations/: models.py  serializers.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
restaurants/: models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
